<resources>
    <string name="app_name">iShop</string>
    <string name="welcome_string">Welcome to iShop</string>
    <string name="new_list_button">Create my Shopping List</string>
    <string name="retrieve_list_button">Use an existing Shopping List</string>
    <string name="choose_from_existing_title">Choose from existing Lists</string>
    <string name="generate_list">Generate my Shopping List</string>
    <string name="shopping_header">Let\'s go shopping!</string>

    <!-- Grocery category headers-->
    <string name="fruit_veg">Fruits and Vegetables</string>
    <string name="seafood">Fish and Seafood</string>
    <string name="meat">Meat and Poultry</string>
    <string name="dairy">Dairy</string>
    <string name="alcohol">Alcoholic Beverages</string>
    <string name="add_button">Add</string>
    <string name="set_name">Set new List Name</string>
    <string name="name_already_taken">This List name is already in use. Please select a different list name.</string>
    <string name="name_not_valid">Please select a valid list name.</string>
    <string name="button_choose_list">Continue with this list</string>
    <string name="switch_value">Got it!</string>
    <string name="manage_lists">Manage current Shopping Lists</string>
    <string name="clear_all_lists">Clear all existing lists</string>
    <string name="all_lists_deleted">All Lists have been deleted.</string>
    <string name="image_of_shopping_trolley">Image of shopping trolley</string>
    <string name="proceed_with_these_categories_button_text">Proceed with these categories</string>
    <string name="manage_grocery_categories">Manage grocery categories</string>
    <string name="add_more_items">Edit grocery items</string>
    <string name="edit_categories">Edit categories</string>
    <string name="category_already_in_use">This category is already in your list</string>
    <string name="shop_finished">Shop finished!</string>

</resources>