<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.navigation.TitleFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/titleConstraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/welcome_text"
            android:layout_width="262dp"
            android:layout_height="86dp"
            android:text="@string/welcome_string"
            android:textAlignment="center"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.113" />

        <Button
            android:id="@+id/create_new_button"
            android:layout_width="318dp"
            android:layout_height="84dp"
            android:text="@string/new_list_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcome_text"
            app:layout_constraintVertical_bias="0.456" />

        <Button
            android:id="@+id/retrieve_list_button"
            android:layout_width="318dp"
            android:layout_height="84dp"
            android:text="@string/retrieve_list_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/create_new_button"
            app:layout_constraintVertical_bias="0.131" />

        <Button
            android:id="@+id/manage_lists_button"
            android:layout_width="318dp"
            android:layout_height="84dp"
            android:text="@string/manage_lists"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/create_new_button"
            app:layout_constraintVertical_bias="0.718" />

        <ImageView
            android:id="@+id/shopping_cart_image"
            android:layout_width="173dp"
            android:layout_height="154dp"
            android:src="@drawable/shopping_cart_image"
            app:layout_constraintBottom_toTopOf="@+id/create_new_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcome_text" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>