<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="newListViewModel"
            type="com.example.ishop.NewListViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/shopping_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:text="@string/new_list_button"
                android:textAlignment="center"
                android:textSize="28sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/header_fruit_veg"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.137" />

            <TextView
                android:id="@+id/header_fruit_veg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/fruit_veg"
                android:textAlignment="textStart"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/shopping_header" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/added_fruitVegTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/header_fruit_veg" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/added_dairyTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/header_dairy" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/added_meatTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/header_meat" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/added_seafoodTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/header_seafood" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/added_alcoholTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/header_alcohol" />

            <EditText
                android:id="@+id/add_fruit_vege_item"
                android:layout_width="248dp"
                android:layout_height="54dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                app:layout_constraintEnd_toStartOf="@+id/button_fruit_veg"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/added_fruitVegTextView" />

            <Button
                android:id="@+id/button_fruit_veg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/add_button"
                app:layout_constraintBottom_toBottomOf="@+id/add_fruit_vege_item"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/add_fruit_vege_item" />

            <TextView
                android:id="@+id/header_dairy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/dairy"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/add_fruit_vege_item" />

            <EditText
                android:id="@+id/add_dairy_item"
                android:layout_width="243dp"
                android:layout_height="54dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                app:layout_constraintEnd_toStartOf="@+id/button_dairy"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/added_dairyTextView" />

            <TextView
                android:id="@+id/header_meat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/meat"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/add_dairy_item" />

            <EditText
                android:id="@+id/add_meat_item"
                android:layout_width="248dp"
                android:layout_height="52dp"
                android:layout_marginStart="16dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                app:layout_constraintEnd_toStartOf="@+id/button_meat"
                app:layout_constraintHorizontal_bias="0.255"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/added_meatTextView" />

            <TextView
                android:id="@+id/header_seafood"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/seafood"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/add_meat_item" />

            <EditText
                android:id="@+id/add_fish_seafood_item"
                android:layout_width="245dp"
                android:layout_height="54dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                app:layout_constraintEnd_toStartOf="@+id/button_seafood"
                app:layout_constraintHorizontal_bias="0.421"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/added_seafoodTextView" />

            <TextView
                android:id="@+id/header_alcohol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/alcohol"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/add_fish_seafood_item" />

            <EditText
                android:id="@+id/add_alcohol_item"
                android:layout_width="260dp"
                android:layout_height="52dp"
                android:layout_marginStart="16dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                app:layout_constraintEnd_toStartOf="@+id/button_alcohol"
                app:layout_constraintHorizontal_bias="0.258"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/added_alcoholTextView" />

            <Button
                android:id="@+id/button_meat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/add_button"
                app:layout_constraintBottom_toBottomOf="@+id/add_meat_item"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/add_meat_item"
                app:layout_constraintVertical_bias="1.0" />

            <Button
                android:id="@+id/button_alcohol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/add_button"
                app:layout_constraintBottom_toBottomOf="@+id/add_alcohol_item"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/add_alcohol_item" />

            <Button
                android:id="@+id/button_seafood"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/add_button"
                app:layout_constraintBottom_toBottomOf="@+id/add_fish_seafood_item"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/add_fish_seafood_item" />

            <Button
                android:id="@+id/button_dairy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/add_button"
                app:layout_constraintBottom_toBottomOf="@+id/add_dairy_item"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/add_dairy_item" />

            <Button
                android:id="@+id/submitButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/generate_list"
                android:textAlignment="center"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/add_alcohol_item" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>